fix: fix overflow:

--- a/scss/style3.scss
+++ b/scss/style3.scss
@@ -222,6 +222,7 @@
 
 .trend-content {
     padding-top: 30px;
+    overflow: hidden;
 }
 
 @keyframes big {
